--- a/.env
+++ b/.env
@@ -16,16 +16,14 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=029c9fb11d06a1ffb731b1cbf172c3ab
+APP_SECRET=f69a5a7de27321ad630dd5db3c326232
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql:/root:@127.0.0.1:3306/Notebook?serverVersion=8&charset=utf8mb4"
-# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/notebook_new?serverVersion=5.7&charset=utf8"
+
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -35,6 +33,4 @@ APP_SECRET=029c9fb11d06a1ffb731b1cbf172c3ab
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
-###> symfony/mailer ###
-MAILER_DSN=smtp://752f6127e10f52:cd9156e2b4f5be@sandbox.smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
-###< symfony/mailer ###
+# MAILER_DSN=
